[FIX] project: fixed set status button in mobile view of project task view
- 16.0

Steps to reproduce:

- Switch the browser to mobile view using dev tools
- Open Project app and click on any existing project
- Select the project which has long name

Issue:

- Set status button was being cut off when the project name
(i.e. if breadcrumb path) is long

Cause:

- The whole breadcrumb is in nowrap flex so when the display is small the
breadcrumb path pushes the set status button to occupy the space to display.
- Due to nowrap flex the items inside the breadcrumb (i.e Set Status Button)
cant  be sent into a new line to adapt with screen size as it happens in
 wrap flex.

Solution:

-The set status button could be having a fixed minimum width for it to be
displayed.

task-3678808

--- a/addons/project/static/src/css/project.css
+++ b/addons/project/static/src/css/project.css
@@ -12,3 +12,9 @@
 .o_form_project_project  .o_setting_box {
   margin-left: 1.5rem;
 }
+
+.o_project_updates_breadcrumb {
+  @include media-breakpoint-down(sm) {
+    min-width: 40%;
+  }
+}
